
	General:
	* Various core components of libpurple are now GObjects.
	* Ciphers are now built from the libpurple directory.
	* Added dependency GPlugin, which is now required to build libpurple with
	  plugins support.
	* Added dependency gobject-introspection, which is now required to enable
	  non-native plugin support.
	* Doxygen has been replaced by gtk-doc for generating documentation.

version 2.10.9 (2/2/2014):
	XMPP:
	* Fix problems logging into some servers including jabber.org and
	  chat.facebook.com. (#15879)

version 2.10.8 (1/28/2014):
	General:
	* Python build scripts and example plugins are now compatible with
	  Python 3. (Ashish Gupta) (#15624)

	libpurple:
	* Fix potential crash if libpurple gets an error attempting to read a
	  reply from a STUN server. (Discovered by Coverity static analysis)
	  (CVE-2013-6484)
	* Fix potential crash parsing a malformed HTTP response. (Discovered by
	  Jacob Appelbaum of the Tor Project) (CVE-2013-6479)
	* Fix buffer overflow when parsing a malformed HTTP response with
	  chunked Transfer-Encoding. (Discovered by Matt Jones, Volvent)
	  (CVE-2013-6485)
	* Better handling of HTTP proxy responses with negative Content-Lengths.
	  (Discovered by Matt Jones, Volvent)
	* Fix handling of SSL certificates without subjects when using libnss.
	* Fix handling of SSL certificates with timestamps in the distant future
	  when using libnss. (#15586)
	* Impose maximum download size for all HTTP fetches.

	Pidgin:
	* Fix crash displaying tooltip of long URLs. (CVE-2013-6478)
	* Better handling of URLs longer than 1000 letters.
	* Fix handling of multibyte UTF-8 characters in smiley themes. (#15756)

	Windows-Specific Changes:
	* When clicking file:// links, show the file in Explorer rather than
	  attempting to run the file. This reduces the chances of a user
	  clicking on a link and mistakenly running a malicious file.
	  (Originally discovered by James Burton, Insomnia Security. Rediscovered